latest changes added

--- a/psql-secrets/secret.yaml
+++ b/psql-secrets/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: psqldb-conf
 type: Opaque
 data:
-  dbname: dXJsX3Nob3J0ZW5lcl9kYg==
-  username: dXNlcg==
-  password: bXlzZWNyZXRwYXNzd29yZA==
+  dbname: a3VtYXJfZGI=
+  username: a3VtYXJfdXNlcg==
+  password: a3VtYXJfcGFzc3dvcmQ=
