--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -1,16 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
+  name: example-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    kubernetes.io/ingress.class: nginx
 spec:
-  rules:
-  - host: nginx-demo.com
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: nginx-svc
-            port: 
-              number: 80
+  rules:   
+    - host: hello-world.ajendra.xyz
+      http:   
+        paths:   
+          - path: /   
+            pathType: Prefix   
+            backend:   
+              service:   
+                name: web   
+                port:   
+                  number: 8080
+          - path: /v2
+            pathType: Prefix
+            backend:
+              service:
+                name: web2
+                port:
+                  number: 8080
