latest changes added

--- a/k8s-volumes/static/pv.yaml
+++ b/k8s-volumes/static/pv.yaml
@@ -8,5 +8,5 @@ spec:
   accessModes:
     - ReadWriteOnce
   awsElasticBlockStore:
-    volumeID: "XXXXXXXXXXXXX"
+    volumeID: "XXXXXXXXXXXXX" # insert AWS EBS volumeID here
   persistentVolumeReclaimPolicy: Retain
